Updated Portfolio Code
New code somehow already saved to GitHub

--- a/index.html
+++ b/index.html
@@ -13,86 +13,103 @@
             <div class="block_element">
                 <div class="inline-block">Contact</div>
                 <div class="inline-block">About Me</div>
-                <div class="inline-block">Pieces</div>
-                <div class="inline-block">Case Studies</div>
+                <div class="inline-block">My Work</div>
             </div>
         </nav>
     </section>
 
 
     <!-- hero section -->
-    <section class="heroSpace">
-        <div class="heroContent">
-            <div id="profilePic">
-                <img src="schumungus.png">
-            </div>
-            <div class="nameTitle">
-                <h1 id="name">Alex Schumacher</h1>
-            </div>
-            <div id="justTitle">
-                <h1 id="myTitle">User Experience Designer</h1>
-            </div>
-            <div id="bio">
-                <p class="normalContent">Hello, I am Alex. I specialize in User Experience design. I try to understand people, businesses, and technology the best that I can.</p>
-            </div>
+<section class="heroSpace">
+    <div class="heroContent">
+        <div id="profilePic">
+            <img src="images/schumungus.png">
         </div>
-    </section>
+        <div class="nameTitle">
+            <h1 id="name">Alex Schumacher</h1>
+        </div>
+        <div id="justTitle">
+            <h1>User Experience Designer</h1>
+        </div>
+        <div id="bio">
+            <p class="normalContent">Hello, I am Alex. I specialize in User Experience design. I try to understand people, businesses, and technology the best that I can.</p>
+        </div>
+    </div>
+</section>
+
+   
+
+ <!--new my work-->
+ <section class="myWork">
+    <h1 class="sectionLabel">My Work</h1>
+    <div class="workGrid">
+        <div class="gridChild hmiImage">
+            <img class="workImg" src="images/HMI Logo.png">
+        </div>
+        <div class="gridChild hmiContent">
+            <h4 class="workTitle">Handmaidens Ministries, inc.</h4>
+            <p class="workContent">The HMI is a non-profit organization in Atlanta. Some classmates and I redesigned their website for its users as part of an assignment.</p>
+            <button></button>
+        </div> 
+        <div class="gridChild oneWayImage">
+            <img src="">
+        </div>
+        <div class="gridChild oneWayContent">
+            <h4 class="workTitle">One Way: Travel app Concept</h4>
+            <p class="workContent">One Way is an app concept that allows users to efficiently plan their next trip. In this project I walk through my strategy to create the most effective user experience possible.</p>
+            <button></button>
+        </div>
+    </div>
+    <h3 class="otherAction">View All Projects</h3>
+</section>
 
 
-    <!-- case studies -->
-    <seciton class="caseStudies">
-        <div class="partTwo">
-            <div class="sectionLabel">
-                <h2>Case Studies</h2>
-            </div>
-        </div>
-        <div class="cardContatiner">
-            <div class="card">
-            </div>
-            <div class="card">
-            </div>
-            <div class="card">
-            </div>
-        </div>
-    </seciton>
-
-
-    <!--pieces-->
-    <seciton class="pieces">
-        <div class="partTwo">
-            <div class="sectionLabel">
-                <h2>Pieces</h2>
-            </div>
-        </div>
-        <div class="cardContatiner">
-            <div class="card">
-            </div>
-            <div class="card">
-            </div>
-            <div class="card">
-            </div>
-        </div>
-    </seciton>
 
 <!-- About me -->
-    <section class="aboutMe">
-        <div class="partTwo">
-            <div class="sectionLabel">
-                <h2>About Me</h2>
-            </div>
+<section class="aboutMe">
+    <h1 class="sectionLabel">About Me</h1>
+    <div class="whyMe">
+        <p class="normalContent">Technology changes rapidly, and people follow suit, so I would like to help bridge the gap of understanding between the two.
+
+            I studied Product Design at Georgia Tech, and I practice JavaScript, HTML, CSS, Figma, and Adobe XD. 
+            
+            Creating solutions to problems we have between people and technology.
+            </p>
+    </div>
+
+
+
+<!--New My Skills Section-->
+<section class="newSkills">
+    <h1 class="sectionLabel">My UX Skills</h1>
+    <div class="flexContainer">
+        <div id="uxCard">
+            <img class="cardImg" src=images/ux.png>
+            <h3 class="cardLabel">UX Skills</h3>
+            <p></p>
         </div>
-    </section>
-
-
-
-    <!-- footer -->
-    <section class="footer">
-        <div id="footContainer">
-            <div id="footQuote">“Even darkness must pass. A new day will come. And when the sun shines it will shine out the clearer.”
-                - Samwise Gamgee</div>
-            <div id="email">abschuzy@gmail.com</div>
+        <div id="uiCard">
+            <img class="cardImg" src="images/ui.png">
+            <h3 class="cardLabel">UI Skills</h3>
+            <p></p>
         </div>
-    </section>
+        <div id="webDevCard">
+            <img class="cardImg" src="images/devcircle.png">
+            <h3 class="cardLabel">Web Development</h3>
+            <p></p>
+        </div>
+    </div>
+</section>
+
+
+<!-- footer -->
+<section class="footer">
+    <div id="footContainer">
+        <div id="footQuote">“Even darkness must pass. A new day will come. And when the sun shines it will shine out the clearer.”
+            - Samwise Gamgee</div>
+        <div id="email">abschuzy@gmail.com</div>
+    </div>
+</section>
 
     
 </body>
